# fffll

./: .gitignore  Makefile  Makefile.am  Makefile.bak  NEWS  README.md  array.c  array.h  bootstrap  builtin.c  builtin.h  configure.ac  evaluate.c  evaluate.h  fffll.el  fffll.l  fffll.man  fffll.py  fffll.y  list.c  list.h  test_example.sh  tree.c  tree.h  unbootstrap  value.c  value.h
asm/: Makefile  list.s  numtostr.s  std.s  test.s  write.s
euler/: math.ff  prob1.ff  prob2.ff  prob3.ff  prob4.ff  prob7.ff
examples/: argsmap.ff  bool.ff  cat.ff  checkip.ff  comment.ff  const.ff  die.ff  doubledef.ff  echo.ff  elseif.ff  emptylist.ff  factorial.ff  failadd.ff  ffunc.ff  fizzbuzz.ff  funchain.ff  functor.ff  index.ff  length.ff  listtests.def  listtests.ff  map.ff  math.ff  numericstring.ff  posttest.ff  range.ff  reciprocal.ff  regex.ff  selfrefer.ff  sin.ff  strings.ff  test.ff  tok.ff  typecheck.ff  what.ff
regex/: regex.py
src/: Makefile.am  array.h  builtin.c  builtin.h  compiler.c  compiler.h  evaluate.c  evaluate.h  exception.c  exception.h  fffll.l  fffll.y  funcdef.c  funcdef.h  lexer.c  list.c  list.h  regex.c  regex.h  repl.c  repl.h  tree.c  tree.h  typecast.c  typecast.h  value.c  value.h
